--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,7 +52,7 @@ body {
 	display: block;
 }
 
-/* To get each character to be underlined, I borrowed the background line from https://codepen.io/thebabydino/pen/mRrPwB */
+/* Character By Character Underlines Possible From: ; https://codepen.io/thebabydino/pen/mRrPwB */
 .underlines { 
   display: block;
   margin: 2em auto;
@@ -77,6 +77,8 @@ body {
 	margin-top: 1em;
 	font: 3ch monospace;
 }
+
+/* All Material Button CSS Code was possible from this link: https://codepen.io/finnhvman/pen/MQyJxV */
 
 .butt {
     position: relative;
