--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,10 +3,9 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 body {
     font-family: "Lato";
-    font-size: 22px;
+    font-size: 20px;
     color: rgba(0, 0, 0, 0.8);
-    letter-spacing: -0.003em;
-    padding: 70px;
+    padding: 1px;
 }
 h1{
     text-align: center;
@@ -22,4 +21,10 @@ table, th, td {
     margin-top: 20px;
     padding: 5px;
     align-items: center;
+}
+.playbtn {
+    align-self: center;
+}
+#startbtn {
+    align-self: center;
 }
