🍀🐔 Checkpoint ./public/index.html:21845626/7 ./public/css/style.css:21845626/330

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,14 @@
 /*Style your own assignment! This is fun! */
 body {
-  background-color: powderblue;
+  background-color: mistyrose;
+}
+
+button {
+  background-color: white;
+}
+
+table, th{
+  border: 1px solid black;
+  background-color: white;
+  width: 800px;
 }
