🚈🎾 Checkpoint ./public/css/style.css:21845626/298 ./public/index.html:21845626/6380

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,3 +12,19 @@ table, th{
   background-color: white;
   width: 800px;
 }
+
+#taskBody {
+  text-align: center;
+}
+
+#high {
+  color:red;
+}
+
+#med {
+  color: blue;
+}
+
+#low {
+  color: green;
+}
