--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,31 @@
 /*Style your own assignment! This is fun! */
+@import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
+
+body{
+font-family: 'Rubik';    
+}
+input:placeholder-shown{
+    font-family: 'Rubik';
+}
+
+table{
+  border-collapse: collapse;
+}
+td,th{
+  border: 1px solid green;
+  text-align: left;
+  padding: 8px;
+}
+tr:nth-child(even){
+  background-color: gray;
+}
+
+.flex-container{
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+}
+
+#status{
+    color: red;
+}
