😅🏤 Checkpoint ./public/index.html:21845626/224 ./public/css/style.css:21845626/394

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,3 +28,13 @@ table, th{
 #low {
   color: green;
 }
+
+.headers{
+  font-weight: bold;
+}
+
+.submit{
+  background: white;
+  font-weight: bold;
+  color: black;
+}
