--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,28 +3,17 @@
 body {
     background-color: #fafafa;
     color: #187BFF;
-    font-size: 1.2em;
     font-family: 'IBM Plex Sans', sans-serif;
-    display:grid;
-    grid-gap: 110px 100px;
+
 }
 h1 {
     color: #0C89E8;
-    font-size: 4em;
+    font-size: 3em;
+    text-align: center;
 }
 h2 {
     color: #00B2FF;
-    font-size: 3em;
-}
-h3 {
     font-size: 2em;
-}
-th {
-    color: #0CC3E8;
-    font-size: 1.75em;
-}
-p {
-    font-size: 1.25em;
 }
 
 input {
@@ -32,7 +21,7 @@ input {
     font-family: 'IBM Plex Sans', sans-serif;
 }
 button {
-    font-size: 2em;
+    font-size: 1.5em;
     font-family: 'IBM Plex Sans', sans-serif;
     border: 2px solid #4CAF50;
     
@@ -40,6 +29,7 @@ button {
 
 li {
     font-size: 1em;
+    list-style-type: none;
 }
 img {
     width: 1080px;
@@ -51,10 +41,24 @@ img {
 #updatebutton {
     border: 2px solid gold
 }
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+    grid-gap: 50px;
+}
+
+.grid-item {
+    border: 1px solid black;
+    text-align: center;
+    align-content: center;
+}
 .nameEntry {
     font-size: 1em;
 }
 
 [data-modal="results"] {
     font-size: 1.5em;
+    text-align: center;
 }
