--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,75 @@
 /*Style your own assignment! This is fun! */
+body {
+    background-color: rgb(2, 15, 94);
+    font-family: Kufam;
+    color: white;
+    justify-content: center;
+}
+
+.heading {
+    text-align: center;
+}
+
+p {
+    text-align: center;
+}
+
+#form {
+    display: flex;
+    justify-content: center;
+}
+
+input {
+    background-color: rgb(27, 34, 85);
+    color: white;
+    font-size: larger;
+    padding: 10px;
+}
+
+button {
+    background-color: aliceblue;
+    font-size: medium;
+    font-weight: bold;
+}
+
+#datatable {
+    display: flex;
+    padding-top: 20px;
+    border: 1px black;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+th {
+    font-size: x-large;
+    font-weight: bold;
+    padding-left: 40px;
+    padding-right: 40px;
+    border: 1px black;
+}
+
+td {
+    font-size: x-large;
+}
+
+.positiondata {
+    padding-left: 25px;
+    padding-right: 55px;
+}
+
+.namedata {
+    padding-left: 65px;
+    padding-right: 15px;
+}
+
+.scoredata {
+    padding-left: 73px;
+    padding-right: 8px;
+}
+
+.locationdata {
+    padding-left: 60px;
+    padding-right: 0px;
+}
+
