💶🏈 Checkpoint ./public/css/style.css:21845626/126

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 /*Style your own assignment! This is fun! */
 body {
-  background-color: mistyrose;
+  background-color: lightgrey;
   font-family: 'Bebas Neue', cursive;
 }
 
