🎿👌 Checkpoint ./public/index.html:21845626/101 ./public/css/style.css:21845626/221

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,3 +44,9 @@ h1{
 .toDoTable{
   grid-template-columns: 40px 50px auto 50px 40px;
 }
+
+.flexbox{
+   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
