--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,17 @@
 * {
   box-sizing: border-box;
+  font-family: Roboto;
 }
- 
+
 form {
   padding: 15px;
+  font-family: Roboto;
 }
 
 ul {
   margin-top: 50px;
   padding: 30px;
+  font-family: Roboto;
 }
 
 ul li {
@@ -22,22 +25,26 @@ ul li {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  font-family: Roboto;
 }
 
 ul li:nth-child(odd) {
   background: #979B95;
+  font-family: Roboto;
 }
 
 ul li:hover {
   background: #3A4930;
   color: #AFE096;
   text-decoration: line-through;
+  font-family: Roboto;
 }
 
 ul li.checked {
   background: #3A4930;
   color: #AFE096;
   text-decoration: line-through;
+  font-family: Roboto;
 }
 
 ul li.checked::before {
@@ -51,21 +58,22 @@ ul li.checked::before {
   transform: rotate(45deg);
   height: 15px;
   width: 7px;
+  font-family: Roboto;
 }
-
 
 .close {
   position: absolute;
   right: 0;
   top: 0;
   padding: 12px 16px 12px 16px;
+  font-family: Roboto;
 }
 
 .close:hover {
   background-color: #f44336;
   color: white;
+  font-family: Roboto;
 }
-
 
 div {
   cursor: pointer;
@@ -78,10 +86,8 @@ div {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  font-family: Roboto;
 }
-
-
-
 
 div.checked::before {
   content: "";
@@ -94,6 +100,7 @@ div.checked::before {
   transform: rotate(45deg);
   height: 15px;
   width: 7px;
+  font-family: Roboto;
 }
 
 /* Style the input */
@@ -106,6 +113,7 @@ input {
   float: left;
   font-size: 16px;
   background: #C2C7BF;
+  font-family: Roboto;
 }
 
 /* Style the "Add" button */
@@ -121,9 +129,11 @@ input {
   cursor: pointer;
   transition: 0.3s;
   border-radius: 0;
+  font-family: Roboto;
 }
 
 #btn:hover {
   background: #3A4930;
   color: #AFE096;
+  font-family: Roboto;
 }
