--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,13 +54,24 @@ form {
     width: 248px;
 }
 
+.button_container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 button {
     margin-top: 5px;
     width: fit-content;
 }
 
 #download_button {
-    margin-left: 7%;
+    margin-right: 5px;
+}
+
+#clear_button {
+    margin-left: 5px;
 }
 
 table {
