--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,119 @@
 /*Style your own assignment! This is fun! */
+/*Colors: https://material.io/resources/color/#!/?view.left=0&view.right=0&primary.color=FFEB3B&secondary.color=CE93D8*/
+
+body {
+    background-color: #e4e7ed;
+    padding: 0 50px;
+}
+
+h1 {
+    font-family: "Crimson Pro";
+    font-size: 45px;
+    font-weight: bold;
+}
+
+form {
+    width: 90%;
+    margin: 0px auto;
+    padding: 20px 0px;
+}
+
+table {
+    width: 90%;
+    margin: 0px auto;
+    padding: 20px 0px;
+    text-align: center;
+    font-family: "Crimson Pro";
+    font-size: 20px;
+    font-weight: bold;
+    justify-content: space-around;
+}
+
+th {
+    max-width: 250px;
+    padding: 10px 5px;
+    word-wrap: break-word;
+    border-radius: 10px;
+}
+
+tr:nth-child(even) {
+    background-color: #f5f5f5;
+}
+
+input, select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-family: "Crimson Pro";
+    font-size: 17px;
+}
+
+label {
+    width: 100%;
+    font-family: "Crimson Pro";
+    font-size: 20px;
+    font-weight: bold;
+}
+
+button {
+    width: 100%;
+    color: white;
+    padding: 14px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-family: "Crimson Pro";
+    font-size: 17px;
+    color: black;
+    font-weight: bold;
+}
+
+/************************* IDS ****************************/
+
+button#add {
+    background-color: lightgreen;
+}
+
+button#update {
+    background-color: lightblue;
+}
+
+button#delete {
+    background-color: lightcoral;
+}
+
+
+/*********************** Classes **************************/
+.header {
+    padding: 20px 0px;
+}
+
+
+.grid {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 25% 5% 70%;
+    justify-content: center;
+    margin: 10px 0px auto auto;
+    height: 100vh;
+    align-items: flex-start;
+}
+
+.form-container {
+    width: 100%;
+    margin: 0 auto;
+    background-color: #ebeef5;
+    border-radius: 10px;
+}
+
+.results-container {
+    width: 100%;
+    margin: 0 auto;
+    background-color: #ebeef5;
+    border-radius: 10px;
+}
+
