--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,31 @@
-/*Style your own assignment! This is fun! */
+body {
+  background-color: #CABFF5;
+  font-family: "Poppins";
+  /* text-align: center; */
+}
+
+table, td, th {
+  border: 4px solid black;
+  color: black;
+  align-self: center;
+}
+
+.inputs {
+  font-family: "Poppins";
+}
+
+button {
+  font-family: "Poppins";
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+}
+
+table {
+  border-collapse: collapse;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
