final edits for A2

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,7 @@ table, th, td {
 }
 
 table {
+    visibility: hidden;
     width: 90%;
     font-size: 18px;
     text-align: right;
@@ -94,6 +95,7 @@ table.table-center {
     margin: 15px;
     margin-bottom: 28px;
 }
+
 
 #top-container {
     width: 100%;
