--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 /*Style your own assignment! This is fun! */
 body {
   background-color: #000000;
-  background-image: URL("/css/BG.png");
+  background-image: URL("/css/BG.PNG");
   text-align: center;
 }
 
