--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,58 @@
-/*Style your own assignment! This is fun! */
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+:root {
+    --body-background: #464946;
+    --header-background: #242423;
+    --primary-accent: #af89be;
+    --text-color: #f5f5f5;
+    --card-background: #dce5e0;
+
+}
+
+html {
+    font-family: 'Cormorant Garamond', serif;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+body {
+    margin: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--body-background);
+    position: relative;
+}
+
+main {
+    max-width: 1440px;
+    margin: auto;
+    text-align: left;
+    padding: 2rem;
+}
+
+.c_catInfo {
+    text-align: center;
+}
+
+.c_catList {
+    display: flex;
+}
+
+.c_catList__heading {
+    flex: 0 0 100%;
+}
+
+.c_header {
+    padding: 0.5rem 1rem;
+    background-color: var(--header-background);
+}
+
+.c_footer {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    background-color: var(--header-background);
+}
+
+.c_footer__information {
+    padding: 1rem;
+}
