Removed index.html, added disclaimer.

--- a/views/home.pug
+++ b/views/home.pug
@@ -8,8 +8,9 @@ block append body
 			blockquote.blockquote.text-center
 				p "It's like Google Drive but with less functionality, no account system, and a 
 					a(href="https://glitch.happyfox.com/kb/article/17-what-are-the-technical-restrictions-for-glitch-projects/") 200MB storage limit
-					|."
+					|*."
 				footer.blockquote-footer Bryce Corbitt
+			h6 *200MB including the source code. Also filesize != size on disk, which is how Glitch measures it.
 	.container
 		.row
 			.col-centered
